2002-03-18 Alexander Rawass <alexannika@users.sourceforge.net>

	tag: alex_after_unitcontainer_changes
	
	* added to _unit:
	  - _unit.getContainer
	  - _unit.getUnitFromContainer
	  - _unit.deleteContainer
	* config var interpreter/trace will give you trace output
	* updated ai_flyto_wp,ai_flyto_jp,ai_patrol,ai_orderlist
	* added debug stuff to Order

	
tag: alex_before_unitcontainer_changes
	
2002-03-16 Alexander Rawass <alexannika@users.sourceforge.net>

	* added data/force_feedback/vegastrike.ifr
	  (Immersion Studio Effects file)
	* exchanged/improved the effects
	
	
2002-03-14 Alexander Rawass <alexannika@users.sourceforge.net>

	* very basic force feedback support
	  - added files src/force_feedback.cpp/h
	  - modified src/Makefile.am
	  - config vars: joystick/force_feedback, joystick/ff_device
	  - to compile use -DHAVE_FORCE_FEEDBACK

	
2002-03-12 Daniel Horn <hellcatv@hotmail.com>
	* Added option for swithcing cockpits when units change
	* Added option for AI to not pilot ship you turret
	* Fixed UnitContainer bug in player_unit
	* Fixed up missiels to deal damage in the list and self destruct
	
2002-03-10 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* Interpreter:
	  - faster lookup for other callback modules
	

2002-03-10 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* Interpreter:
	  - faster callback module lookup
	  - faster lookup of callback module std (others will follow)


2002-03-09 Daniel Horn <hellcatv@hotmail.com>
	* Fixed disappearing first unit bug with low quality sprites
	* Fixed cockpit cycle complaint
	* Added Gauntlet mission (if you kill 3 guys, 3 more come)
	* Added XvX missions using the nvn module
	* Fixed [ key to cycle through all allies
	* Fixed save directory to be .vegastrike in windows

2002-03-09 Alexander Rawass <alexannika@users.sourceforge.net>

	* director:
	  ai_orderlist now remembers order when re-launched
	* added findOrderList to Order
	* replaced messy vegastrike.config with older version

